[package]
name = "femur-server"
version = "0.0.0"
authors = ["Bradley Gannon <bradley@bradleygannon.com>"]
edition = "2021"
license = "Apache-2.0"

[dependencies]
argon2 = "0.3.2"
base64 = "0.13.0"
clap = "3.0.2"
femur = { path = "../femur" }
rand_core = { version = "0.6", features = ["std"] }
tiny_http = { version = "0.9.0", features = ["ssl"] }
